[package]
name = "packet-capture"
version = "0.1.0"
authors = ["modeverv <modeverv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pnet_packet = "0.22.0"
pnet = "0.25.0"
log = "0.4"
env_logger = "0.6.1"
